Fixes for file inputs, HTML escapes, test cases